--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux-saga": "^1.1.3",
     "typescript": "^3.9.6"
