--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "populat-repos-github",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
+  "license": "MIT",
+  "homepage": "https://awahab07.github.io/weekly-trending-github-repos",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
